--- a/FTCollectorApp/View/AsBuiltDocMenu.xaml
+++ b/FTCollectorApp/View/AsBuiltDocMenu.xaml
@@ -3,12 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FTCollectorApp.View.AsBuiltDocMenu">
     <ContentPage.Content>
-        <StackLayout Padding="10">
-            <Label Text="As Built Documents" FontSize="Large" HorizontalOptions="Center" Padding="0,20,0,20"/>
+        <StackLayout Padding="20">
+            <Label Text="As Built Documents" FontSize="Large" HorizontalOptions="Center" Padding="20"/>
 
             <Button x:Name="btnSite" Text="Site" Clicked="btnSite_Clicked"  HorizontalOptions="FillAndExpand" Padding="20"/>
             <Button x:Name="btnTraceMenu" Text="Trace Fiber" Clicked="OpenTraceMenu"  HorizontalOptions="FillAndExpand" Padding="20"/>
-
+            <Button Text="Delete Chassis"  HorizontalOptions="FillAndExpand" Padding="20"/>
+            
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
