--- a/FTCollectorApp/View/TraceFiberPages/TracingMenuPage.xaml
+++ b/FTCollectorApp/View/TraceFiberPages/TracingMenuPage.xaml
@@ -3,10 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FTCollectorApp.View.TraceFiberPages.TracingMenuPage">
     <ContentPage.Content>
-      <StackLayout>
-            <Label Padding="0,20,0,20" Text="Tracing" FontSize="Large" />
-            <Button Padding="10" Text="Start a Trace" Clicked="btnStartTracing_Clicked"/>
-            <Button Padding="10" x:Name="btnStart" Text="Resume a Trace" Clicked="btnResume_Clicked"/>
+      <StackLayout Padding="20">
+            <Label Padding="0,20,0,20" Text="Tracing" FontSize="Large" HorizontalOptions="Center"/>
+            <Button Padding="10" Text="Start a Trace"  Command="{Binding StartTracerCommand}"/>
+            <Button Padding="10" x:Name="btnStart" Text="Resume a Trace"  Command="{Binding ResumeTracerCommand}"/>
       </StackLayout>
     </ContentPage.Content>
 </ContentPage>
