--- a/FTCollectorApp/View/TraceFiberPages/DuctTracePage.xaml
+++ b/FTCollectorApp/View/TraceFiberPages/DuctTracePage.xaml
@@ -3,108 +3,124 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:FTCollectorApp.Utils"
              x:Class="FTCollectorApp.View.TraceFiberPages.DuctTracePage">
     <ContentPage.Content>
-        <ScrollView>
-            <StackLayout Padding="10" VerticalOptions="FillAndExpand">
 
-                <Grid RowDefinitions="2*,0.5*,*,0.5*,*,0.5*,*,0.5*" ColumnDefinitions="*,*">
-                    <Label Text="Duct Trace" Grid.Row="0" Grid.ColumnSpan="2" HorizontalOptions="Center" FontSize="Large" />
-                    <Label Text="Beginning Tag Number *" Grid.Column="0" Grid.Row="1" />
-                    <Label Text="Site type"              Grid.Column="1" Grid.Row="1" />
-                    <local:Dropdown2 Grid.Column="0" Grid.Row="2" x:Name="pTagNumber" 
-                                 ItemsSource="{Binding BeginningSiteList}" ItemDisplayBinding="{Binding HosTagNumber}"
-                                     SelectedItem="{Binding SelectedTagNum}"
-                                 />
-                    <local:BorderColorEntry Grid.Column="1" Grid.Row="2" x:Name="txtSiteType" 
+            <ScrollView>
+            <StackLayout Padding="20">
+                <Label Text="Duct Trace"  HorizontalOptions="Center" FontSize="Large" Padding="20" />
+
+                <Grid RowDefinitions="0.1*,0.2*,0.1*,0.2*,0.1*,0.2*,0.1*,0.2*,0.1*,0.2*" ColumnDefinitions="*,*">
+
+                    <Label Text="Beginning Tag Number *" Grid.Column="0" Grid.Row="0" />
+
+                    <Entry Grid.Row="1" Text="{Binding SearchTag, Mode=TwoWay}" />
+                    <!--<local:Dropdown2 Grid.Column="0" Grid.Row="2" x:Name="pTagNumber" 
+                                ItemsSource="{Binding BeginningSiteList}" ItemDisplayBinding="{Binding HosTagNumber}"
+                                    SelectedItem="{Binding SelectedTagNum}"
+                                />-->
+                    <Label Text="--Select--" Grid.Column="1" Grid.Row="0" IsVisible="{Binding IsSearching}" />
+                    <ListView Grid.Column="1" Grid.Row="1" Grid.RowSpan="5" ItemsSource="{Binding SiteInListView}" SelectedItem="{Binding SelectedTagNum, Mode=TwoWay}"                     
+                      BackgroundColor="LightGray" IsVisible="{Binding IsSearching}" >
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <TextCell Text="{Binding HosTagNumber}"  />
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+
+                    <Label Text="Site type" Grid.Column="0" Grid.Row="2" />
+                    <local:BorderColorEntry Grid.Column="0" Grid.Row="3" x:Name="txtSiteType" 
                                             Text="{Binding SelectedTagNum.HostType}"  IsEnabled="False"/>
 
-                    <Label Text="Site name"  Grid.Row="3" Grid.ColumnSpan="2"/>
-                    <local:BorderColorEntry  Grid.Row="4" Grid.ColumnSpan="2" x:Name="txtSiteName" 
+                        <Label Text="Site name"  Grid.Row="4" />
+                        <local:BorderColorEntry  Grid.Row="5" x:Name="txtSiteName" 
                                 Text="{Binding SelectedTagNum.HostType}" IsEnabled="False"/>
 
-                    <Label Text="Which Duct? *" Grid.Column="0" Grid.Row="5" />
-                    <Label Text="Usage" Grid.Column="1" Grid.Row="5" />
-                    <local:Dropdown Grid.Column="0" Grid.Row="6" 
+                        <Label Text="Which Duct? *" Grid.Column="0" Grid.Row="6" />
+                        <Label Text="Usage" Grid.Column="1" Grid.Row="6" />
+                        <local:Dropdown Grid.Column="0" Grid.Row="7" 
                                  ItemsSource="{Binding DuctConduitDatas}" 
                                  ItemDisplayBinding="{Binding WhichDucts}"
                                  SelectedItem="{Binding SelectedDuct,Mode=TwoWay}"
                                  />
-                    <local:BorderColorEntry Grid.Column="1" Grid.Row="6" Text="{Binding SelectedDuct.DuctUsage}" IsEnabled="False"/>
+                        <local:BorderColorEntry Grid.Column="1" Grid.Row="7" Text="{Binding SelectedDuct.DuctUsage}" IsEnabled="False"/>
 
-                    <Label Text="Color" Grid.Column="0" Grid.Row="7" />
-                    <Label Text="Size" Grid.Column="1" Grid.Row="7" />
-                    <local:BorderEntry Grid.Column="0" Grid.Row="8" Text="{Binding SelectedDuct.DuctColor}" IsEnabled="False"/>
-                    <local:BorderColorEntry Grid.Column="1" Grid.Row="8" Text="{Binding SelectedDuct.DuctSize}" IsEnabled="False"/>
+                        <Label Text="Color" Grid.Column="0" Grid.Row="8" />
+                        <Label Text="Size" Grid.Column="1" Grid.Row="8" />
+                    <local:BorderEntry Grid.Column="0" Grid.Row="9" Text="{Binding SelectedDuct.ColorName}" BackgroundColor="{Binding SelectedDuct.ColorHex}" IsEnabled="False"/>
+                        <local:BorderColorEntry Grid.Column="1" Grid.Row="9" Text="{Binding SelectedDuct.DuctSize}" IsEnabled="False"/>
 
-                </Grid>
-                <Grid RowDefinitions="0.1*,0.2*,0.1*,0.2*,0.1*,0.2*,0.1*,0.2*,0.1*,0.2*,0.1*,0.2*,0.1*,0.2*,0.1*,0.2*" ColumnDefinitions="2*,0.5*,*,*">
-                    <Label Text="#1 What Cable ? *"  />
-                    <Label Text="Sheath Out" Grid.Column="2" Grid.ColumnSpan="2" />
-                    <Label Text="SM Cnt" Grid.Row="2" Grid.Column="2"  />
-                    <Label Text="MM Cnt" Grid.Row="2" Grid.Column="3" />
-                    <local:Dropdown2 Grid.Row="1" 
+                    </Grid>
+                    <Grid RowDefinitions="0.1*,0.2*,0.1*,0.2*,0.1*,0.2*,0.1*,0.2*,0.1*,0.2*,0.1*,0.2*,0.1*,0.2*,0.1*,0.2*" ColumnDefinitions="2*,0.5*,*,*">
+                        <Label Text="#1 What Cable ? *"  />
+                        <Label Text="Sheath Out" Grid.Column="2" Grid.ColumnSpan="2" />
+                        <Label Text="SM Cnt" Grid.Row="2" Grid.Column="2"  />
+                        <Label Text="MM Cnt" Grid.Row="2" Grid.Column="3" />
+                        <local:Dropdown2 Grid.Row="1" 
                                  ItemsSource="{Binding aFiberCableList}" ItemDisplayBinding="{Binding CableIdDesc}"
                                  SelectedItem="{Binding SelectedCable1, Mode=TwoWay}"/>
-                    <Button Grid.Column="1" Grid.Row="1" Text="X" Command="{Binding RemoveCable1Command}"/>
-                    <local:BorderEntry Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Text="{Binding SheathMark1, Mode=TwoWay}"/>                                                          
-                    <local:BorderColorEntry Grid.Row="3" Grid.Column="2" Text="{Binding SelectedCable1.SMCount}" IsEnabled="False"/>
-                    <local:BorderColorEntry Grid.Row="3" Grid.Column="3" Text="{Binding SelectedCable1.MMCount}" IsEnabled="False"/>
+                        <Button Grid.Column="1" Grid.Row="1" Text="X" Command="{Binding RemoveCable1Command}"/>
+                        <local:BorderEntry Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Text="{Binding SheathMark1, Mode=TwoWay}"/>
+                        <local:BorderColorEntry Grid.Row="3" Grid.Column="2" Text="{Binding SelectedCable1.SMCount}" IsEnabled="False"/>
+                        <local:BorderColorEntry Grid.Row="3" Grid.Column="3" Text="{Binding SelectedCable1.MMCount}" IsEnabled="False"/>
 
-                    <Label Text="#2 What Cable ? *"  Grid.Row="4" />
-                    <Label Text="Sheath Out" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" />
-                    <Label Text="SM Cnt" Grid.Row="6" Grid.Column="2"  />
-                    <Label Text="MM Cnt" Grid.Row="6" Grid.Column="3" />
-                    <local:Dropdown2 Grid.Row="5" 
+                        <Label Text="#2 What Cable ? *"  Grid.Row="4" />
+                        <Label Text="Sheath Out" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" />
+                        <Label Text="SM Cnt" Grid.Row="6" Grid.Column="2"  />
+                        <Label Text="MM Cnt" Grid.Row="6" Grid.Column="3" />
+                        <local:Dropdown2 Grid.Row="5" 
                                  ItemsSource="{Binding aFiberCableList}" ItemDisplayBinding="{Binding CableIdDesc}"
                                  SelectedItem="{Binding SelectedCable2, Mode=TwoWay}"/>
-                    <Button Grid.Column="1" Grid.Row="5" Text="X" Command="{Binding RemoveCable2Command}"/>
-                    <local:BorderEntry Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="2" Text="{Binding SheathMark2, Mode=TwoWay}"/>
-                    <local:BorderColorEntry Grid.Row="7" Grid.Column="2" Text="{Binding SelectedCable2.SMCount}" IsEnabled="False"/>
-                    <local:BorderColorEntry Grid.Row="7" Grid.Column="3" Text="{Binding SelectedCable2.MMCount}" IsEnabled="False"/>
+                        <Button Grid.Column="1" Grid.Row="5" Text="X" Command="{Binding RemoveCable2Command}"/>
+                        <local:BorderEntry Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="2" Text="{Binding SheathMark2, Mode=TwoWay}"/>
+                        <local:BorderColorEntry Grid.Row="7" Grid.Column="2" Text="{Binding SelectedCable2.SMCount}" IsEnabled="False"/>
+                        <local:BorderColorEntry Grid.Row="7" Grid.Column="3" Text="{Binding SelectedCable2.MMCount}" IsEnabled="False"/>
 
-                    <Label Text="#3 What Cable ? *"  Grid.Row="8" />
-                    <Label Text="Sheath Out" Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="2" />
-                    <Label Text="SM Cnt" Grid.Row="10" Grid.Column="2"  />
-                    <Label Text="MM Cnt" Grid.Row="10" Grid.Column="3" />
-                    <local:Dropdown2 Grid.Row="9" 
+                        <Label Text="#3 What Cable ? *"  Grid.Row="8" />
+                        <Label Text="Sheath Out" Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="2" />
+                        <Label Text="SM Cnt" Grid.Row="10" Grid.Column="2"  />
+                        <Label Text="MM Cnt" Grid.Row="10" Grid.Column="3" />
+                        <local:Dropdown2 Grid.Row="9" 
                                  ItemsSource="{Binding aFiberCableList}" ItemDisplayBinding="{Binding CableIdDesc}"
                                  SelectedItem="{Binding SelectedCable3, Mode=TwoWay}"/>
-                    <Button Grid.Column="1" Grid.Row="9" Text="X" Command="{Binding RemoveCable3Command}"/>
-                    <local:BorderEntry Grid.Row="9" Grid.Column="2" Grid.ColumnSpan="2"  Text="{Binding SheathMark3, Mode=TwoWay}"/>
-                    <local:BorderColorEntry Grid.Row="11" Grid.Column="2" Text="{Binding SelectedCable3.SMCount}" IsEnabled="False"/>
-                    <local:BorderColorEntry Grid.Row="11" Grid.Column="3" Text="{Binding SelectedCable3.MMCount}" IsEnabled="False"/>
+                        <Button Grid.Column="1" Grid.Row="9" Text="X" Command="{Binding RemoveCable3Command}"/>
+                        <local:BorderEntry Grid.Row="9" Grid.Column="2" Grid.ColumnSpan="2"  Text="{Binding SheathMark3, Mode=TwoWay}"/>
+                        <local:BorderColorEntry Grid.Row="11" Grid.Column="2" Text="{Binding SelectedCable3.SMCount}" IsEnabled="False"/>
+                        <local:BorderColorEntry Grid.Row="11" Grid.Column="3" Text="{Binding SelectedCable3.MMCount}" IsEnabled="False"/>
 
-                    <Label Text="#4 What Cable ? *"  Grid.Row="12" />
-                    <Label Text="Sheath Out" Grid.Row="12" Grid.Column="2" Grid.ColumnSpan="2" />
-                    <Label Text="SM Cnt" Grid.Row="14" Grid.Column="2"  />
-                    <Label Text="MM Cnt" Grid.Row="14" Grid.Column="3" />
-                    <local:Dropdown2 Grid.Row="13" 
+                        <Label Text="#4 What Cable ? *"  Grid.Row="12" />
+                        <Label Text="Sheath Out" Grid.Row="12" Grid.Column="2" Grid.ColumnSpan="2" />
+                        <Label Text="SM Cnt" Grid.Row="14" Grid.Column="2"  />
+                        <Label Text="MM Cnt" Grid.Row="14" Grid.Column="3" />
+                        <local:Dropdown2 Grid.Row="13" 
                                  ItemsSource="{Binding aFiberCableList}" ItemDisplayBinding="{Binding CableIdDesc}"
                                  SelectedItem="{Binding SelectedCable4, Mode=TwoWay}"/>
-                    <Button Grid.Column="1" Grid.Row="13" Text="X" Command="{Binding RemoveCable4Command}"/>
-                    <local:BorderEntry Grid.Row="13" Grid.Column="2" Grid.ColumnSpan="2"  Text="{Binding SheathMark4, Mode=TwoWay}"/>
-                    <local:BorderColorEntry Grid.Row="15" Grid.Column="2" Text="{Binding SelectedCable4.SMCount}" IsEnabled="False"/>
-                    <local:BorderColorEntry Grid.Row="15" Grid.Column="3" Text="{Binding SelectedCable4.MMCount}" IsEnabled="False"/>
+                        <Button Grid.Column="1" Grid.Row="13" Text="X" Command="{Binding RemoveCable4Command}"/>
+                        <local:BorderEntry Grid.Row="13" Grid.Column="2" Grid.ColumnSpan="2"  Text="{Binding SheathMark4, Mode=TwoWay}"/>
+                        <local:BorderColorEntry Grid.Row="15" Grid.Column="2" Text="{Binding SelectedCable4.SMCount}" IsEnabled="False"/>
+                        <local:BorderColorEntry Grid.Row="15" Grid.Column="3" Text="{Binding SelectedCable4.MMCount}" IsEnabled="False"/>
 
-                </Grid>
+                    </Grid>
 
-                <Grid RowDefinitions="0.1*,0.2*" ColumnDefinitions="*,*">
-                    <Label Text="Install Method" />
-                    <Label Text="UoM" Grid.Column="1" />
-                    <local:Dropdown2 Grid.Row="1"
+                    <Grid RowDefinitions="0.1*,0.2*" ColumnDefinitions="*,*">
+                        <Label Text="Install Method" />
+                        <Label Text="UoM" Grid.Column="1" />
+                        <local:Dropdown2 Grid.Row="1"
                                      ItemsSource="{Binding DuctInstallList}" ItemDisplayBinding="{Binding DuctInstallDesc}"
                                      SelectedItem="{Binding SelectedDuctInstall}"
                                      />
-                    <local:Dropdown2 Grid.Column="1" Grid.Row="1"
+                        <local:Dropdown2 Grid.Column="1" Grid.Row="1" 
                                      ItemsSource="{Binding UnitOfMeasures}" ItemDisplayBinding="{Binding UOMUnit}"
                                      SelectedItem="{Binding SelectedUOM}"
                                      />
-               
 
-                </Grid>
 
-                <Button Text="Save and Start Tracing" Command="{Binding SaveAndContinueCommand}"/>
+                    </Grid>
 
-        </StackLayout>
-        </ScrollView>
+                    <Button Text="Save and Start Tracing" Command="{Binding SaveAndContinueCommand}"/>
+                <Button Text="Save Locally " IsEnabled="false" Command="{Binding SaveLocallyAndContinueCommand}"/>
+
+            </StackLayout>
+            </ScrollView>
+
     </ContentPage.Content>
 </ContentPage>
