--- a/FTCollectorApp/View/TraceFiberPages/EndTracePage.xaml
+++ b/FTCollectorApp/View/TraceFiberPages/EndTracePage.xaml
@@ -1,32 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:FTCollectorApp.Utils"
-             x:Class="FTCollectorApp.View.TraceFiberPages.EndTracePage">
+             x:Class="FTCollectorApp.View.TraceFiberPages.EndTracePage"
+             >
     <ContentPage.Content>
-        <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-
-            <StackLayout Padding="20">
-                <Label Text="End Trace" FontSize="Large" HorizontalOptions="Center" Padding="20" />
-                <Grid RowDefinitions="0.2*,0.5*" ColumnDefinitions="*,*">
-                    <Label Text="Site In" />
-                    <local:Dropdown Grid.Row="1" 
-                        ItemsSource="{Binding SiteInList}" ItemDisplayBinding="{Binding HosTagNumber}"
-                        SelectedItem="{Binding SelectedTagNum}" />
-                </Grid>
-                <Label Text="Site In" />
-                <Entry x:Name="searchbar" Text="{Binding SearchTag, Mode=TwoWay}" AbsoluteLayout.LayoutBounds="15,70,285,38" AbsoluteLayout.LayoutFlags="None"/>
-                <Picker ItemsSource="{Binding SiteInListView}" ItemDisplayBinding="{Binding HosTagNumber}"
-                      IsVisible="{Binding IsSearching, Mode=TwoWay}" AbsoluteLayout.LayoutBounds="20,110,269,160" AbsoluteLayout.LayoutFlags="None"/>
-
-
-                <Grid RowDefinitions="0.2*,0.5*,0.2*,0.5*,0.2*,0.5*,0.2*,0.5*" ColumnDefinitions="*,*" IsVisible="{Binding IsEntriesDiplayed, Mode=TwoWay}">
+        <StackLayout Padding="20">
+            <Label Text="End Trace" FontSize="Large" HorizontalOptions="Center" Padding="10" />
+            <Grid RowDefinitions="0.2*,0.5*" ColumnDefinitions="*,*">
+                <Label Text="Type End of Site" />
+                <Entry Grid.Row="1" Text="{Binding SearchTag, Mode=TwoWay}" />
+                <Label Text="Click here > Complete" Grid.Column="1" />
+                <Button  Grid.Row="1" Grid.Column="1" Text="New Site" Command="{Binding CreateNewCommand}"/>
+            </Grid>
+            <StackLayout IsVisible="{Binding IsSearching, Mode=TwoWay}" HeightRequest="150">
+                <ListView ItemsSource="{Binding SiteInListView}" SelectedItem="{Binding SelectedSiteIn, Mode=TwoWay}" 
+                      
+                       BackgroundColor="LightGray">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <TextCell Text="{Binding HosTagNumber}"  />
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackLayout>
+            
+            <Grid RowDefinitions="0.2*,0.5*,0.2*,0.5*,0.2*,0.5*,0.2*,0.5*" ColumnDefinitions="*,*" IsVisible="{Binding IsEntriesDiplayed, Mode=TwoWay}">
                     <Label Text="Site type" />
                     <local:BorderColorEntry Grid.Row="1" x:Name="txtSiteType" 
-                                            Text="{Binding SelectedTagNum.HostType}"  IsEnabled="False"/>
+                                            Text="{Binding SelectedSiteIn.HostType}"  IsEnabled="False"/>
 
                     <Label Text="Site name"  Grid.Row="2" Grid.ColumnSpan="2"/>
                     <local:BorderColorEntry  Grid.Row="3" Grid.ColumnSpan="2" x:Name="txtSiteName" 
-                                Text="{Binding SelectedTagNum.HostType}" IsEnabled="False"/>
+                                Text="{Binding SelectedSiteIn.HostType}" IsEnabled="False"/>
 
                     <Label Text="Which Duct? *" Grid.Row="4" />
                     <Label Text="Usage" Grid.Column="1" Grid.Row="4" />
@@ -45,13 +50,13 @@
 
 
 
-                </Grid>
+            </Grid>
 
-                <Button Text="Complete Fiber Trace section" Command="{Binding CompleteFiberCommand}" />
-                <Button Text="Suspend" Command="{Binding SuspendCommand}" />
-                <Button Text="Broken Trace Wire" Command="{Binding BrokenTraceWireCommand}" />
-                <Button Text="Delete This Trace" Command="{Binding DeleteTraceCommand}" />
+            <Button Text="Complete Fiber Trace section" Command="{Binding CompleteFiberCommand}" />
+            <Button Text="Suspend" Command="{Binding SuspendCommand}" />
+            <Button Text="Broken Trace Wire" Command="{Binding BrokenTraceWireCommand}" />
+            <Button Text="Delete This Trace" Command="{Binding DeleteTraceCommand}" />
             </StackLayout>
-        </AbsoluteLayout>
+
     </ContentPage.Content>
 </ContentPage>
