Add offline feature , change TaskId from List to concat TaskId in form text string, import defects from mrwoody's list

--- a/FTCollectorApp/App.xaml
+++ b/FTCollectorApp/App.xaml
@@ -23,7 +23,7 @@
 
             <Style TargetType="Picker" >
                 <Setter Property="TitleColor" Value="Blue" />
-                <Setter Property="TextColor" Value="Aquamarine" />
+                <Setter Property="TextColor" Value="Black" />
             </Style>
 
             <Color x:Key="blueColor">#1E90FF</Color>
