--- a/FTCollectorApp/View/StartTimePopupView.xaml
+++ b/FTCollectorApp/View/StartTimePopupView.xaml
@@ -11,11 +11,12 @@
         HorizontalOptions="Center"
         VerticalOptions="Center"     
             >
+            <Label Text="{Binding CrewName}" Padding="20" FontSize="Large"/>
             <Label Text="Time:"/>
             <Entry x:Name="entryStartTime" 
                    Placeholder="StartTime" TextChanged="entryStartTime_TextChanged"/>
             <Label Text="Per Diem:"/>
-            <Picker x:Name="pickPerDiem" >
+            <Picker x:Name="pickPerDiem" FontSize="Medium" TextColor="Black" >
                 <Picker.Items>
                     <x:String>No per diem</x:String>
                     <x:String>Full day per diem</x:String>
