--- a/FTCollectorApp/View/SitesPage/CompleteSitePage.xaml
+++ b/FTCollectorApp/View/SitesPage/CompleteSitePage.xaml
@@ -2,12 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:forms="clr-namespace:SignaturePad.Forms;assembly=SignaturePad.Forms" 
-             x:Class="FTCollectorApp.View.EquipmenReturnPage">
-
+             x:Class="FTCollectorApp.View.SitesPage.CompleteSitePage">
     <ContentPage.Content>
         <StackLayout Padding="20">
-            <Label FontSize="Large" Text="Equipment Return" HorizontalOptions="Center"/>
-            <Picker x:Name="eqIncharge"/>
+            <Label Padding="20"  FontSize="Large" x:Name="crewleader" HorizontalOptions="Center"/>            
+            <Label Padding="20,5,20,20"  FontSize="Large" Text="Signature" HorizontalOptions="Center"/>
             <forms:SignaturePadView x:Name="signaturePad"  BackgroundImage="sign_bg.png"
       BackgroundColor="LightGray"  
       StrokeColor="Black"  
